--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,9 +1,12 @@
 name: Generate Snake
 
+permissions:
+  contents: write
+
 on:
   schedule:
-    - cron: "0 0 * * *"     # roda todo dia à meia-noite (UTC)
-  workflow_dispatch:         # permite rodar manualmente
+    - cron: '0 0 * * *'
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -27,5 +30,5 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
-          message: "chore: update snake animation"
-          add: "output/github-contribution-grid-snake-dark.svg"
+          message: 'chore: update snake animation'
+          add: 'output/github-contribution-grid-snake-dark.svg'
